プロフィール編集

--- a/profile.html
+++ b/profile.html
@@ -34,35 +34,37 @@
     <div class="contents">
       <section>
         <div class="profile_container">
-          <h3>20xx</h3>
-          <div>誕生</div>
-          <h3>20xx</h3>
+          <h2>経歴</h2>
+
+          <h3>2003</h3>
+          <div>6月29日　東京都に爆誕</div>
+          <h3>2019</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            4月　郁文館グローバル高等学校　Global Science Track　入学
           </div>
-          <h3>20xx</h3>
+          <h3>2020</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            1月　オーストラリア　サンシャインコースト　Mountain Creek SHS 留学
           </div>
-          <h3>20xx</h3>
+          <h3>2022</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            4月　京都芸術大学　芸術学部情報デザイン学科　クロステックデザインコース　入学
           </div>
-          <h3>20xx</h3>
+
+
+          <h2>人生設計</h2>
+
+          <h3>2027</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            3月　京都芸術大学　芸術学部情報デザイン学科　クロステックデザインコース　卒業
           </div>
-          <h3>20xx</h3>
+          <h3>2029</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            結婚
           </div>
-          <h3>20xx</h3>
+          <h3>2053</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            半世紀会
           </div>
           <h3>20xx</h3>
           <div>
