--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </header>
 
-    <div class="top_eye_catch">サイトの名前など</div>
+    <div class="top_eye_catch">elchan's cells</div>
 
     <div class="contents">
       <section class="sec">
@@ -76,6 +76,6 @@
       </section>
     </div>
 
-    <footer>名前など</footer>
+    <footer>elchan</footer>
   </body>
 </html>
