プロフィールページの編集

--- a/profile.html
+++ b/profile.html
@@ -66,26 +66,15 @@
           <div>
             半世紀会
           </div>
-          <h3>20xx</h3>
+          <h3>2063</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            セカンドライフスタート
           </div>
-          <h3>20xx</h3>
+          <h3>2103</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            人生の終焉
           </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
+        
         </div>
       </section>
     </div>
