--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/main.js"></script>
-    <title>プロフィールページ</title>
+    <title>Profile</title>
   </head>
   <body class="contents_page">
     <header>
@@ -79,6 +79,6 @@
       </section>
     </div>
 
-    <footer>名前など</footer>
+    <footer>elchan's story</footer>
   </body>
 </html>
