トップページ前面に最初ロゴ
main.jsでクリックかスクロールが起こったときに消える

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>トップページ</title>
   </head>
   <body>
+    <div id="topback"><img src="./images/logo.svg" alt="" /></div>
+    
     <header>
       <div class="inner">
         <div id="menu_btn"></div>
