いっぱい編集

--- a/report.html
+++ b/report.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/main.js"></script>
-    <title>詳細ページ</title>
+    <title>contact</title>
   </head>
   <body class="contents_page">
     <header>
@@ -23,10 +23,10 @@
           <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
-          <li><a href="./profile.html">profile</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li class="current"><a href="./report.html">report</a></li>
+          <li><a href="./profile.html">biography</a></li>
+          <li><a href="./works.html">portfolio</a></li>
+          <li><a href="./slide.html">about</a></li>
+          <li class="current"><a href="./report.html">contact</a></li>
         </ul>
       </div>
     </header>
@@ -85,6 +85,6 @@
       </section>
     </div>
 
-    <footer>名前など</footer>
+    <footer>Contact with elchan</footer>
   </body>
 </html>
