--- a/works.html
+++ b/works.html
@@ -39,18 +39,18 @@
           <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
-          <li><a href="./profile.html">profile</a></li>
-          <li class="current"><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li><a href="./profile.html">biography</a></li>
+          <li class="current"><a href="./works.html">portfolio</a></li>
+          <li><a href="./slide.html">about</a></li>
+          <li><a href="./report.html">contact</a></li>
         </ul>
       </div>
     </header>
 
     <section>
-      <div class="report_eye_catch">works</div>
+      <div class="report_eye_catch">portfolio</div>
       <div class="contents">
-        <h2>WORKS</h2>
+        <h2>portfolio</h2>
         <ul class="thumb_list">
           <li>
             <a href="./images/toy01.jpg" data-lity
@@ -81,6 +81,6 @@
       </div>
     </section>
 
-    <footer>elchan's works</footer>
+    <footer>elchan's portfolio</footer>
   </body>
 </html>
