--- a/index.html
+++ b/index.html
@@ -14,51 +14,49 @@
     ></script>
     
     <script src="./js/main.js"></script>
-    <title>トップページ</title>
+    <title>home</title>
   </head>
   <body>
-    <div id="topback"><img src="./images/logo.svg" alt="" /></div>
+    <div id="topback"><img src="./images/el.svg" alt="" /></div>
     
     <header>
       <div class="inner">
         <div id="menu_btn"></div>
         <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
+          <a href="./index.html"><img src="./images/el.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
-          <li><a href="./profile.html">profile</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li><a href="./profile.html">biography</a></li>
+          <li><a href="./works.html">portfolio</a></li>
+          <li><a href="./slide.html"> about</a></li>
+          <li><a href="./report.html">contact</a></li>
         </ul>
       </div>
     </header>
 
-    <div class="top_eye_catch">elchan's cells</div>
+    <div class="top_eye_catch"></div>
 
     <div class="contents">
       <section class="sec">
-        <h2>更新履歴</h2>
-        <ul>
-          <li><a href="./report.html">レポートを追加しました</a></li>
-          <li><a href="./works.html">WORKSページを追加しました</a></li>
-        </ul>
+        <div class="box2">
+          <h2>elchan</h2>
+          <p></p>
+        </div>
       </section>
 
       <section class="sec">
-        <h2>MENU</h2>
+        <h2>more</h2>
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
               <img src="./images/toy01.jpg" />
             </div>
             <div class="link_txt">
-              <p class="link_title">PROFILE</p>
+              <p class="link_title">BIOGRAPHY</p>
               <div>
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト<br />
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト
+                爆誕から終焉まで。
               </div>
-              <a class="link_btn" href="./profile.html">Go!</a>
+              <a class="link_btn" href="./profile.html">れっつぴえん</a>
             </div>
           </div>
 
@@ -67,17 +65,17 @@
               <img src="./images/toy02.jpg" />
             </div>
             <div class="link_txt">
-              <p class="link_title">WORKS</p>
+              <p class="link_title">PORTFOLIO</p>
               <div>
-                作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト
+                集めてみた。
               </div>
-              <a class="link_btn" href="./works.html">Go!</a>
+              <a class="link_btn" href="./works.html">れっつぴえん</a>
             </div>
           </div>
         </div>
       </section>
     </div>
 
-    <footer>elchan</footer>
+    <footer>elchan's cell</footer>
   </body>
 </html>
