--- a/slide.html
+++ b/slide.html
@@ -39,7 +39,7 @@
     <script src="./js/slide.js"></script>
 
     <script src="./js/main.js"></script>
-    <title>スライドページ</title>
+    <title>about</title>
   </head>
   <body class="contents_page">
     <header>
@@ -49,10 +49,10 @@
           <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
-          <li><a href="./profile.html">profile</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li class="current"><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li><a href="./profile.html">biography</a></li>
+          <li><a href="./works.html">portfolio</a></li>
+          <li class="current"><a href="./slide.html">about</a></li>
+          <li><a href="./report.html">contact</a></li>
         </ul>
       </div>
     </header>
@@ -69,6 +69,6 @@
       </section>
     </div>
 
-    <footer>名前など</footer>
+    <footer>About elchan</footer>
   </body>
 </html>
