--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
       <div class="inner">
         <div id="menu_btn"></div>
         <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
+          <a href="./index.html"><img src="./images/el.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
           <li class="current"><a href="./profile.html">biography</a></li>
@@ -38,6 +38,10 @@
 
           <h3>2003</h3>
           <div>6月29日　東京都に爆誕</div>
+          <h3>2017</h3>
+          <div>
+            11月　GACKTに出会う
+          </div>
           <h3>2019</h3>
           <div>
             4月　郁文館グローバル高等学校　Global Science Track　入学
@@ -90,7 +94,7 @@
       <p>
         <h3>　　　私の人格を形成した体験</h3>
         <div>
-          
+
         </div>
       </p>
     </div>
