--- a/slide.html
+++ b/slide.html
@@ -46,7 +46,7 @@
       <div class="inner">
         <div id="menu_btn"></div>
         <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
+          <a href="./index.html"><img src="./images/el.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
           <li><a href="./profile.html">biography</a></li>
@@ -59,12 +59,16 @@
     <div class="contents">
       <section>
         <div class="slide">
-          <div><img src="./images/toy01.jpg" /></div>
-          <div><img src="./images/toy02.jpg" /></div>
-          <div><img src="./images/toy03.jpg" /></div>
-          <div><img src="./images/toy01.jpg" /></div>
-          <div><img src="./images/toy02.jpg" /></div>
-          <div><img src="./images/toy03.jpg" /></div>
+          <div><img src="./images/me1.jpg" /></div>
+          <div><img src="./images/me3.jpg" /></div>
+          <div><img src="./images/me9.jpg" /></div>
+          <div><img src="./images/me6.jpg" /></div>
+          <div><img src="./images/me8.jpg" /></div>
+          <div><img src="./images/me5.jpg" /></div>
+          <div><img src="./images/me2.jpg" /></div>
+          <div><img src="./images/me7.jpg" /></div>
+          <div><img src="./images/me4.jpg" /></div>
+          <div><img src="./images/meandmama.jpg" /></div>
         </div>
       </section>
     </div>
