--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <section class="sec">
         <div class="box2">
           <h2>elchan</h2>
-          <p></p>
+          <p>東京都に爆誕し、幼い頃から千年の都京都への憧れを募らせたわたしのことが知れるうぇぶさいと。ぴえん。
+
+          </p>
         </div>
       </section>
 
@@ -49,7 +51,7 @@
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/toy01.jpg" />
+              <img src="./images/me9.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">BIOGRAPHY</p>
@@ -62,7 +64,7 @@
 
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/toy02.jpg" />
+              <img src="./images/human front 2.JPG" />
             </div>
             <div class="link_txt">
               <p class="link_title">PORTFOLIO</p>
