--- a/report.html
+++ b/report.html
@@ -20,7 +20,7 @@
       <div class="inner">
         <div id="menu_btn"></div>
         <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
+          <a href="./index.html"><img src="./images/el.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
           <li><a href="./profile.html">biography</a></li>
@@ -34,24 +34,18 @@
     <div class="contents">
       <section>
         <div class="report">
-          <h1>ウェブサイトに関しての分析</h1>
+          <h1>elchanと繋がろう！</h1>
 
           <div class="outline">
-            <div class="pic">
-              <img src="./images/thumb01.png" alt="" />
-            </div>
             <div class="txt">
-              <p>概要</p>
-              <p>
-                日本デザインセンターの創立60年の展覧会を中心としたサイト。<br />
-                「VISUALIZE60」は、創立60年を機に、デザインの役割について本質を可視化する「VISUALIZE」の視座から問い直す試みです。4回の展覧会を中心に、2020年9月よりスタート。
-              </p>
+              <p>Gmail: elchanpp@gmail.com</p>
+              <p>Instgram: palcimy_</p>
+
+              <p>YouTube: 
               <a
-                class="ex_link"
-                href="https://visualize60.ndc.co.jp/"
-                target="_blank"
-                >https://visualize60.ndc.co.jp/</a
-              >
+                href="https://www.youtube.com/channel/UCc_EuBbTpHjUU3iyrEwZ8Qg"
+                >https://www.youtube.com/channel/UCc_EuBbTpHjUU3iyrEwZ8Qg/</a
+              ></p>
             </div>
           </div>
 
