--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <section class="sec">
         <div class="box2">
           <h2>elchan</h2>
-          <p>東京都に爆誕し、幼い頃から千年の都京都への憧れを募らせたわたしのことが知れるうぇぶさいと。ぴえん。
+          <p>東京に爆誕し、幼い頃から千年の都京都への憧れを募らせたわたしのことが知れるうぇぶさいと。ぴえん。
 
           </p>
         </div>
       </section>
 
       <section class="sec">
-        <h2>more</h2>
+        <h2>more...</h2>
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
