--- a/report.html
+++ b/report.html
@@ -50,34 +50,41 @@
           </div>
 
           <div class="mb_m">
-            <h3>考察</h3>
+            <h3>最近のわたし</h3>
             <p>
-              情に棹させば流される。智に働けば角が立つ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。とかくに人の世は住みにくい。意地を通せば窮屈だ。<br />
-              とかくに人の世は住みにくい。<br />
-              どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。意地を通せば窮屈だ。山路を登りながら、こう考えた。智に働けば角が立つ。どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。智に働けば角が立つ。<br />
-              とかくに人の世は住みにくい。山路を登りながら、こう考えた。とかくに人の世は住みにくい。住みにくさが高じると、安い所へ引き越したくなる。住みにくさが高じると、安い所へ引き越したくなる。情に棹させば流される。
+            わたしは毎日コツコツ続けることが得意ではないから、食べる日・寝る日・お風呂に入る日・稼ぐ日・考える日・散歩する日・遊ぶ日の七日間をもって一週間としたい。
+            最近のマイブームは「愛」で、愛は世界を救うと本気で信じてる。シェアハピ〜。
             </p>
+            <p>　</p>
+            <p>
+              人生の最終目標を、死ぬその瞬間に笑っていることとして、
+              「いつか未来、なぜあの選択をと後悔 することもあるでしょうが、しかしその時その瞬間のあなたにとってはその選択が最善だったと思って欲しい。」（ここは今から倫理です。７巻 高柳先生のセリフから引用）
+              をしていたい。
+            </p>
+          
           </div>
 
           <div class="mb_m">
             <h3>参考</h3>
             <a
               class="ex_link"
-              href="https://digitalidentity.co.jp/blog/creative/2021webdesign.html"
+              href="https://gackt.com/"
               target="_blank"
-              >2021年ウェブデザインのトレンドは？</a
+              >GACKT公式サイト</a
             >
             <br />
             <a
               class="ex_link"
-              href="https://photoshopvip.net/126127"
+              href="https://bleach-20th-anniversary.com/"
               target="_blank"
-              >ついに出た！2021年注目のWebデザイン人気トレンド9個まとめ</a
+              >BLEACH20周年プロジェクト公式サイト</a
             >
           </div>
         </div>
       </section>
     </div>
+
+<p>　</p>
 
     <footer>Contact with elchan</footer>
   </body>
