--- a/profile.html
+++ b/profile.html
@@ -92,9 +92,63 @@
 
     <div class="box17">
       <p>
-        <h3>　　　私の人格を形成した体験</h3>
+        <p>　</p>
+        <h2>　　　　　　　わたしの回想記</h2>
+        <p>　</p>
         <div>
+          <h4>　　　　　　生まれた時</h4>
+          <p>　　　　　　　わたしがこの世に爆誕した日は快晴だったと祖母は言う。</p>
+          <p>　　　　　　　梨の花のように白い肌をしていて、奈良の大仏のように光となって人を照らし、真っ直ぐな人に育ってほしいという両親の思いから「梨奈」と名前をもらった。</p>  
+          <p>　</p>
 
+          <h4>　　　　　　保育園にて</h4>
+          <p>　　　　　　　無限の体力を持っていた幼いわたし。今となっては考えられないが、鬼ごっこでは永遠に走り続けて先生たちを困らせていたらしい。</p>
+          <p>　　　　　　　第一次反抗期のわたしは、運動会のかけっこでスタート地点に立っただけで先生が、「りなちゃんがスタート地点に・・・！」と涙するほどの問題児。</p>
+          <p>　</p>
+
+          <h4>　　　　　　小学校にて</h4>
+          <p>　　　　　　　3年生の時、初めて朝礼で倒れる。その後、保健室で休んでいた姉と遭遇して驚く。</p>
+          <p>　　　　　　　4年生の夏廊下で、自分で考案した雑巾キャッチという遊びをしていたところ、学校で一番怖い先生に見つかり怒られる。</p>
+          <p>　</p>
+          <p>　　　　　　　児童館においてあったことがきっかけで漫画にハマり、中でもBLEACHの沼から抜けられなくなる。兄様しか勝たん。</p>
+          <p>　　　　　　　少女漫画にもハマり、きゅん系女子が誕生。</p>
+          <p>　</p>
+
+          <h4>　　　　　　中学校にて</h4>
+          <p>　　　　　　　2年生の冬、祖父を亡くす。夏に入院してからは毎日祖父のいる病院に通い、何をするでもなく一緒に時間を過ごした。</p>
+          <p>　　　　　　　第二次反抗期のわたしは、姉を追って同じ高校に進学することを言われるのがとても嫌だった。事実なのに。</p>
+          <p>　</p>
+          <p>　　　　　　　2年生の11月にテレビドラマ「悪夢ちゃん」でGACKTを見てずっきゅんクリティカルヒットする。こんなイケメンがいていいものか。</p>
+          <p>　　　　　　　2年生の12月にカラオケの本人映像を見て坂本冬美の美しさに魅了され演歌女子になる。歌わない。聴くだけ。</p>
+          <p>　</p>
+          <p>　　　　　　　進撃の巨人の世界観に圧倒されてファンになる。推しのエルヴィンは美しく死亡。</p>
+          <p>　　　　　　　図書館戦争の堂上篤が爆。</p>
+          <p>　</p>
+
+          <h4>　　　　　　高校にて</h4>
+          <p>　　　　　　　2020年、世の中が新型コロナに染まる前に渡航し、オーストラリアで一年生活する。</p>
+          <p>　　　　　　　多様性・価値観の違いを肌で感じるという経験は大きく、留学に行ってからがわたしの人生の第二章。</p>
+          <p>　　　　　　　3年生の秋、感受性が爆上がりし、人間の存在意義や自分の在り方について悩み始める。</p>
+          <p>　　　　　　　様々な経験を通して、日常の感謝と今の大切さ、人の尊さに気づく。</p>
+          <p>　</p>
+          <p>　　　　　　　1年生の冬、初めて坂本冬美のコンサートに行く。生で拝めた。</p>
+          <p>　　　　　　　高校時代好きだった歌は、「バイマイサイ」と「YOKAZE」。</p>
+          <p>　</p>
+          <p>　　　　　　　キングダムのアニメを観て王騎将軍に惚れるも、まさかのシーズン１の最後で死亡。</p>
+          <p>　</p>
+          <p>　　　　　　　ぴえんのかわいさに気づく。</p>
+          <p>　</p>
+
+          <h4>　　　　　　大学にて</h4>
+          <p>　　　　　　　関西のノリについていくのに必死。入学早々で異世界を体験する。</p>
+          <p>　　　　　　　高校時代、あんなにも「早く大人になりたい」と思っていたのにその願望もあっけなく消え去り、今は学生生活を謳歌したいと思っている。</p>
+          <p>　　　　　　　みんなギリギリで生きている。</p>
+          <p>　</p>
+          <p>　　　　　　　まさかのGACKTキャラが定着する。布教。</p>
+          <p>　</p>
+
+
+          
         </div>
       </p>
     </div>
